fixtures/typescript/tests/baselines/reference/libBaseline.errors.txt
libBaseline.ts(12,29): error TS2339: Property 'caller' does not exist on type '() => void'.
libBaseline.ts(13,12): error TS2339: Property 'substr' does not exist on type '"baseline"'.
libBaseline.ts(14,24): error TS2339: Property 'compile' does not exist on type 'RegExp'.


==== libBaseline.ts (3 errors) ====
    Intl.supportedValuesOf("currency");
    new Intl.NumberFormat().formatRange(1, 2);
    
    [1, 2, 3].at(0);
    [1, 2, 3].toReversed();
    "baseline".at(0);
    
    Object.hasOwn({ baseline: true }, "baseline");
    new Error("problem", { cause: new Error("root") });
    /baseline/d.hasIndices;
    
    (function probeCaller() {}).caller; // Error
                                ~~~~~~
!!! error TS2339: Property 'caller' does not exist on type '() => void'.
    "baseline".substr(1); // Error
               ~~~~~~
!!! error TS2339: Property 'substr' does not exist on type '"baseline"'.
    new RegExp("baseline").compile("baseline"); // Error
                           ~~~~~~~
!!! error TS2339: Property 'compile' does not exist on type 'RegExp'.
    